refactor:更新规则库配置转行为树配置的逻辑

--- a/python/gamev3_2_btree/GameConfig.json
+++ b/python/gamev3_2_btree/GameConfig.json
@@ -275,6 +275,11 @@
                     "id" : "MJ_caozuojianguolv_4561_1",
                     "args" : [
                     ]
+                },
+                {
+                    "id" : "MJ_caozuojianguolv_4560_3",
+                    "args" : [
+                    ]
                 }
         ],
         "initTeam" : [
