refactor:更新拉取工程脚本

--- a/python/git_clone/config.json
+++ b/python/git_clone/config.json
@@ -35,7 +35,13 @@
 			"file" : "hall_demo/assets/app/modules/notify/appNotifyCenter.lua",
 			"content" : [
 				["  elseif key == 293 then", " -- elseif key == 293 then"],
-				[" -- elseif key == 293 then --f4模拟旋转", "  elseif key == 293 then --f4模拟旋转"]
+				[" -- elseif key == 293 then --f4", "  elseif key == 293 then --f4"]
+			]
+		},
+		{
+			"file" : "hall_demo/run.bat",
+			"content" : [
+				[":: start babe.exe \"x=", "start babe.exe \"console=0;x="]
 			]
 		}
 	]
